优化向量，驱除fileId，改为originKey，表示第三方主键或者关联键